# my-cpp-stuff

./: CMakeLists.txt  CMakeSettings.json
android/share/eigen3/: Eigen3Targets.cmake
native/: CMakeLists.txt  camera.cpp  camera.hpp
native/imgui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
native/impls/: automaton_impl.cpp  automaton_impl.hpp  cameras_impl.cpp  cameras_impl.hpp  default_impl.cpp  gl43_impl.cpp  gl43_impl.hpp
native/impls/caves_impl/: marching_cubes.hpp
native/platform/: opengl.cpp
native/tinyfd/: fd.cpp  fd.hpp  tinyfiledialogs.cpp
res/: imgui.ini
src/: CMakeLists.txt  camera.cpp  camera.hpp  impl.hpp  jni_interface.cpp  main.cpp  program_state.cpp  program_state.hpp  visualization.cpp  visualization.hpp
src/imgui/: imconfig.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp
src/impls/: automaton_impl.cpp  automaton_impl.hpp  cameras_impl.cpp  cameras_impl.hpp  caves_impl.cpp  caves_impl.hpp  default_impl.cpp  default_impl.hpp  gl43_impl.cpp  gl43_impl.hpp  menu_impl.cpp  menu_impl.hpp
src/impls/caves_impl/: marching_cubes_tables.inl
src/nothings/: stb.cpp
src/opengl/: glsl.hpp  mygl.cpp  mygl_enums.hpp  mygl_extensions.hpp  mygl_functions.hpp  mygl_functions.inl  mygl_glfw.hpp  mygl_loader.hpp  mygl_loader.inl
src/platform/: environment.hpp  opengl.cpp  opengl.hpp
src/processing/: algorithm.hpp  epipolar.cpp  epipolar.hpp  gl_clock.cpp  gl_clock.hpp  gl_func.cpp  gl_func.hpp  image.cpp  image.hpp  perf_log.hpp  photogrammetry.cpp  photogrammetry.hpp
src/processing/sift/: sift.cpp  sift.hpp
src/processing/sift/detail/: shaders.hpp  sift_state.cpp  sift_state.hpp
